--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
         <canvas></canvas>
         <script src="init_constants.js"></script>
         <script src="characteristics.js"></script>
+        <script src="control_settings.js"></script>
         <script src="randomElements.js"></script>
         <script src="collision.js"></script>
         <script src="index.js"></script> 
         <script src="menu_btn.js"></script>
         <script src="start_menu.js" onload="start_menu_loaded()"></script>
+        <script src="on_level_up.js"></script>
     </body>
 </html>
