--- a/index.html
+++ b/index.html
@@ -1,8 +1,21 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Tanks</title>
+        <title>R-Tanks</title>
         <link rel="stylesheet" href="style.css" type="text/css">
+        <link rel="icon" type="image/png" href="logo.png">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="utf-8">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="green">
+        <meta name="apple-mobile-web-app-title" content="R-Tanks">
+        <meta name="application-name" content="R-Tanks">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="description" content="R-Tanks is a 2D game with tanks. Play now!">
+        <meta name="theme-color" content="green">
+        <meta name='keywords' content='2d, tanks, slasher, biyrololo, бурлоло, 2д, opensource'>
+        <meta name="author" content="biyrololo">
+        <meta name='target' content='all'>
     </head>
     <body>
         <canvas></canvas>
@@ -11,6 +24,7 @@
         <script src="control_settings.js"></script>
         <script src="randomElements.js"></script>
         <script src="collision.js"></script>
+        <script src="spawn_zones.js"></script>
         <script src="index.js"></script> 
         <script src="menu_btn.js"></script>
         <script src="start_menu.js" onload="start_menu_loaded()"></script>
