--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>R-Tanks</title>
+        <title>Tanks Survivors</title>
         <link rel="stylesheet" href="style.css" type="text/css">
         <link rel="icon" type="image/png" href="logo.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="utf-8">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="green">
-        <meta name="apple-mobile-web-app-title" content="R-Tanks">
-        <meta name="application-name" content="R-Tanks">
+        <meta name="apple-mobile-web-app-title" content="Tanks Survivors">
+        <meta name="application-name" content="Tanks Survivors">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="description" content="R-Tanks is a 2D game with tanks. Play now!">
+        <meta name="description" content="Join epic tank battles in Tanks Survivors! Command your tank with a variety of weapons: machine gun, flamethrower, beam gun, and more. Upgrade your skills and utilize passive enhancements like air support, black beam, and laser to dominate the battlefield. Every decision matters! Use strategy to survive and destroy hordes of enemies. Team up with allies and enjoy endless action in this thrilling tank combat game">
         <meta name="theme-color" content="green">
-        <meta name='keywords' content='2d, tanks, slasher, biyrololo, бурлоло, 2д, opensource'>
+        <meta name='keywords' content='2d, tanks, slasher, biyrololo, opensource, action, roguelike, arcade, top-down shooter'>
         <meta name="author" content="biyrololo">
         <meta name='target' content='all'>
     </head>
